# GitLab-Bot-identification

./: .gitignore  LICENSE  README.md  requirements.txt
rabbit_offline/: README.md  (+3 more)
src/: api_manager.py  bimbas_ghmap.py  gh_api.py  gl_api.py  pyproject.toml
src/gitbot_utils/: api_manager.py  gh_api.py  gl_api.py  model_utils.py
src/gitbot_utils/config/: gl_action_to_activity.json  gl_event_to_action.json
src/notebooks/: data_analysis.ipynb  evaluate_predictions.ipynb  model_training.ipynb  predict_contributors.ipynb  rabbit_ghmap_test.ipynb  requirements.txt  test_model.ipynb
src/notebooks/github/: data_analysis.ipynb  mapping_comparison.ipynb  model_training.ipynb  rabbit_ghmap_test.ipynb  split_analysis.ipynb
src/notebooks/gitlab/: dataset_analysis.ipynb
src/resources/config/: action_to_activity.json  event_to_action.json  gl_action_to_activity.json  gl_event_to_action.json
src/resources/data/: bimbas-features.csv  bimbas_features-withoutNR.csv  bimbas_features.csv  ghmap_features.csv  new-ghmap_features.csv  new-rbmap_features.csv  old-rbmap_features.csv  test_contributors.csv  test_contributors.txt
src/resources/evals/: bimbas-rbmap_predictions.csv  bimbas_predictions.csv  bimbaseline-ghmap_predictions.csv  bimbis_predictions.csv  different_predictions.csv  evaluation.csv  evaluation_gitlab.csv  ghmap-prediction.csv  rabbit_predictions.csv
src/resources/models/: bimbas.joblib  bimbis-noNR.joblib  bimbis.joblib  bimlab.joblib
src/scripts/: create_gitlab_dataset.py  extract_gitlab_repositories.py  save_user_events.py  save_user_features.py
(+17 files in other folders)
